# CS5422

./: .gitignore  README.md
hw1/: CMakeLists.txt  FDO.sh  Makefile  README.md  cases  file_io.cc  hw1.cc  oe.cc  oe.h  profile.sh  test_ltbb.cpp  util.h
hw1/perf_results/: 01.out_perf.txt  02.out_perf.txt  03.out_perf.txt  04.out_perf.txt  05.out_perf.txt  06.out_perf.txt  07.out_perf.txt  08.out_perf.txt  09.out_perf.txt  10.out_perf.txt  11.out_perf.txt  12.out_perf.txt  13.out_perf.txt  14.out_perf.txt  15.out_perf.txt  16.out_perf.txt  17.out_perf.txt  18.out_perf.txt  19.out_perf.txt  20.out_perf.txt  21.out_perf.txt  22.out_perf.txt  23.out_perf.txt  24.out_perf.txt  25.out_perf.txt  26.out_perf.txt  27.out_perf.txt  28.out_perf.txt  29.out_perf.txt  30.out_perf.txt  31.out_perf.txt  32.out_perf.txt  33.out_perf.txt  34.out_perf.txt  35.out_perf.txt  36.out_perf.txt  profile_LTO.yml  profile_base.yml  profile_boost.yml  profile_lib.yml  (+4 more)
hw1/test_sort/: Makefile  test_sort.cpp
hw1/tests/: file_io.cc  oe_sort.cpp  random.hpp
hw2/: Makefile  README.md  hw2_omp.cc  hw2a.cc  hw2a_coarse.cc  hw2a_tbb.cc  hw2a_tile_slow.cc  hw2b.cc  hw2seq.c  hw2seq.cc  mandelbrot.ispc  perf.cpp  perf.hpp  pthread.cc  seq_check.h  test_eff.sh  timer.cc  timer.hpp  util.h
hw3/: Makefile  README.md  floyd_warshall.ispc  hw3.cc  hw3_ispc.cc  hw3_ispc_old.cc  hw3_omp.cc  hw3_perf.cc  hw3_seq.cc  hw3_tbb.cc  profile.sh  random.cpp  validator.cc
hw4/: apsp.cu
hw4-1/: Makefile  README.md  apsp.cu  hw4-1.cu  random.cpp
hw4-2/: Makefile  README.md  build.cu  hw4-2.cu
lab1/: Makefile  pi.cc
lab2/: oe.c  report.md
lab3/: hybrid_pi.c  omp_prime.c  pi_openmp.c  pi_pthread.c
lab4/: Makefile  README.md  sobel.cu  sobel.cuda
(+47 files in other folders)
